--- a/_config.yml
+++ b/_config.yml
@@ -8,4 +8,5 @@ gist:
 kramdown:
   math_engine: mathjax
   syntax_highlighter: rouge
-includes_dir: .
+include:
+  - "001-Introduction to Python.md"
