--- a/_config.yml
+++ b/_config.yml
@@ -3,6 +3,7 @@ safe: true
 source: .
 incremental: false
 highlighter: rouge
+remote_theme: "mmistakes/so-simple-theme@3.2.0"
 gist:
   noscript: false
 kramdown:
