--- a/_config.yml
+++ b/_config.yml
@@ -1,11 +1,16 @@
+title: Learn Python with Zartosht
+description: >- # this means to ignore newlines until "baseurl:"
+  As I learn Python, I will document my journey here. I hope you find it useful.
+baseurl: ""
 lsi: false
 safe: true
 source: .
 incremental: false
 highlighter: rouge
-theme: jekyll-theme-minimal
 gist:
   noscript: false
 kramdown:
   math_engine: mathjax
   syntax_highlighter: rouge
+include:
+  - "_includes/bootstrap.html"
