--- a/_config.yml
+++ b/_config.yml
@@ -6,9 +6,12 @@ lsi: false
 safe: true
 source: .
 incremental: false
-highlighter: rouge
 gist:
   noscript: false
+highlighter: rouge
 kramdown:
   math_engine: mathjax
   syntax_highlighter: rouge
+  input: GFM
+  auto_ids: true
+markdown:    kramdown
