--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,7 @@ gist:
 highlighter: rouge
 kramdown:
   math_engine: mathjax
-  syntax_highlighter: rouge
+  # syntax_highlighter: rouge
   input: GFM
   auto_ids: true
 markdown: kramdown
