--- a/_config.yml
+++ b/_config.yml
@@ -19,7 +19,7 @@ url: "https://python.zartosht.dev"
 incremental: false
 gist:
   noscript: false
-highlighter: rouge
+# highlighter: rouge
 kramdown:
   math_engine: mathjax
   # syntax_highlighter: rouge
