--- a/_config.yml
+++ b/_config.yml
@@ -19,13 +19,13 @@ url: "https://python.zartosht.dev"
 incremental: false
 gist:
   noscript: false
-highlighter: none
-kramdown:
-  math_engine: mathjax
-  syntax_highlighter: none
-  input: GFM
-  auto_ids: true
-markdown: kramdown
+# highlighter: none
+# kramdown:
+  # math_engine: mathjax
+  # syntax_highlighter: none
+  # input: GFM
+  # auto_ids: true
+# markdown: kramdown
 sass:
   sass_dir: _sass
 plugins:
