--- a/_config.yml
+++ b/_config.yml
@@ -20,9 +20,11 @@ incremental: false
 gist:
   noscript: false
 highlighter: none
-# kramdown:
+kramdown:
   # math_engine: mathjax
   # syntax_highlighter: none
+  syntax_highlighter_opts: 
+    disable: true
   # input: GFM
   # auto_ids: true
 # markdown: kramdown
